--- a/templates/contact.html
+++ b/templates/contact.html
@@ -109,6 +109,8 @@
         </div>
     </footer>
 
-    <script src="java.js"></script>
+    <script src="{{url_for('static', filename='JavaScript/java.js')}}"></script>
+    
+    
 </body>
 </html>
