--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{{url_for('static', filename='CSS/style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='CSS/css/styles.css')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=jost:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
 </head>
 <body>
     <header>
@@ -276,7 +277,8 @@
             }
         }
     </script>
-    <script src="js/cart.js"></script>
-    <script src="java.js"></script>
+    <script src="{{url_for('static', filename='JAVAScript/js/cart.js')}}"></script>
+    <script src="{{url_for('static', filename='JAVAScript/java.js')}}"></script>
+
 </body>
 </html>
