--- a/templates/produit.html
+++ b/templates/produit.html
@@ -262,7 +262,7 @@
             }
         }
     </script>
-    <script src="js/cart.js"></script>
-    <script src="java.js"></script>
+    <script src="{{url_for('static', filename='JavaScript/js/cart.js')}}"></script>
+    <script src="{{url_for('static', filename='JavaScript/java.js')}}"></script>
 </body>
 </html>
